@startuml
skinparam classAttributeIconSize 0
abstract class Ticket{
-ticketCode: int
-price: Double

+Ticket(ticketCode: int)
+getPrice() :Double
+{abstract} ticketDesc():String

}

class TrainTicket{
+{abstract} ticketDesc():String
}

class BusTicket{
+{abstract} ticketDesc():String
}

class PlaneTicket{
+{abstract} ticketDesc():String
}

class Customer{
-name:String
-email:String
-mobileNum:String
+Customer(name: String)
}

class Booking{
-transactionID:String
-customer:Customer
-totalPrice:Double
+Booking()
}

Booking -- Ticket : has a
Booking -- Customer : creates a

Ticket <|-- BusTicket
Ticket <|-- TrainTicket
Ticket <|-- PlaneTicket






@enduml